# msgviz

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
app/: chat.css  chat.js  index.js  msgviz-base.js
app/templates/: chat.template.html  index.html
config/: sources.example.json
demo/: MANIFEST.json
demo/audio/: voice_00.m4a  voice_01.m4a  voice_02.m4a  voice_03.m4a  voice_04.m4a  voice_05.m4a
demo/config/: sources.json
demo/data/: ocr.json  transcripts.json  visualizer.db
docs/: API.md  ARCHITECTURE.md  CLI.md  EMBEDDING.md  FRONTEND_KIT.md  GETTING_STARTED.md  SCHEMA.md  STACK.md
docs/proposals/: whatsapp_live.md
docs/screenshots/: README.md
msgviz/: __init__.py  __main__.py  config.py  paths.py
msgviz/adapters/: imessage_backup.py  imessage_db.py  imessage_live.py  imessage_schema.py  whatsapp_db.py  whatsapp_export.py  whatsapp_export_schema.py  whatsapp_live.py  whatsapp_schema.py
msgviz/cli/: __init__.py  _helpers.py  chat_cmd.py  check_cmd.py  delete_cmd.py  device_cmd.py  drift_cmd.py  import_cmd.py  init_cmd.py  main.py  ocr_cmd.py  person_cmd.py  serve_cmd.py  status_cmd.py  transcribe_cmd.py  whatsapp_cmd.py
msgviz/core/: backup.py  canonical.py  drift.py  migrate.py  person_resolver.py  progress.py  purge.py  schema.sql  schema_migrate.py  source_adapter.py  sources.py  sync.py  whisper.py
msgviz/legacy/: __init__.py  export_data.py
msgviz/mediakit/: process.py
msgviz/server/: app.py  factory.py
msgviz/workers/: media_worker.py  ocr_images.py  transcribe.py
scripts/: msgviz-demo  msgviz-dev  quickstart.sh  render_console_screenshots.py  render_import_screenshot.py  render_page_screenshots.py  setup.sh
tests/: conftest.py
tests/fixtures/: README.md  build_media_fixtures.py  build_sample_chat_db.py  build_sample_whatsapp_db.py  sample_chat.db  sample_whatsapp.db
tests/integration/: test_adapter_imessage.py  test_adapter_whatsapp.py  test_migrate_characterization.py  test_person_migrate_from_sources.py  test_sync_idempotency.py  test_whatsapp_import.py
tests/unit/: test_adapter_drift_wiring.py  test_api_drift.py  test_avatars.py  test_backup.py  test_canonical.py  test_check.py  test_drift.py  test_drift_cli.py  test_factory_embedding.py  test_frontend_kit.py  test_hash_layout.py  test_imessage_db.py  test_imessage_schema.py  test_import_guardrails.py  test_import_whatsapp_live.py  test_index_new_count.py  test_ocr_engine.py  test_origin_source_consistency.py  test_person_resolver.py  test_progress.py  test_progress_eta.py  (+8 more)
tools/: import_whatsapp_export.py  import_whatsapp_live.py
(+8 files in other folders)
